# arksink

./: .envdefaults  .gitignore  Arksink.cabal  Dockerfile  Makefile  README.md  docker-compose.yml  elm-package.json  migrate.sh  package.json  stack.yaml
db/: arksink.sql
db/migrations/: 20170102184833_create_bookmarks.sql  20170313210043_create_clients.sql  20170331203321_add_creator_id_to_bookmarks.sql
docker/: entrypoint.sh  install-nodejs.sh  install-redis.sh  install-sassc.sh  install-stack.sh  setup-dependency-management-requirements.sh
src/app/client/: Main.hs
src/app/server/: Main.hs
src/lib/: Bookmark.hs  Client.hs  Database.hs  Landing.hs  RequestInfo.hs  Session.hs  Static.hs  URL.hs  View.hs
src/lib/About/: URL.hs
src/lib/Arksink/: Client.hs  Server.hs
src/lib/Bookmark/: Data.hs  URL.hs  View.hs
src/lib/Client/: Data.hs  URL.hs  View.hs
src/lib/Cookie/: Secure.hs
src/lib/Cookie/Secure/: Middleware.hs
src/lib/Crypto/: Password.hs  Verification.hs
src/lib/Database/: PostgreSQL.hs  RedisDB.hs
src/lib/Extension/: Applicative.hs  Functor.hs
src/lib/General/: URL.hs  View.hs
src/lib/Landing/: URL.hs  View.hs
src/lib/Session/: Data.hs  URL.hs  View.hs
src/lib/SessionClient/: Data.hs
src/lib/assets/scripts/: arksink.coffee
src/lib/assets/scripts/elm/: logout.elm
src/lib/assets/styles/: arksink.scss  base.scss
src/spec/: Main.hs
static/: 403.html  404.html
