name:                Arksink
version:             0.1.0.0
synopsis:            Multibrowser cloud bookmark synchroniser
description:         Bookmark management for the indecisive
homepage:            https://arksink.io
license:             MIT
license-file:        LICENSE
author:              Habib Alamin
maintainer:          habib@arksink.io
copyright:           © Habib Alamin
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src/lib
  exposed-modules:     Arksink.Server
                     , Arksink.Client
  other-modules:       Landing.URL
                     , Landing.View
                     , Landing
  build-depends:       base >= 4.7 && < 5
                     , dotenv >= 0.3.1.0 && < 1
                     , unix >= 2.7.2.1 && < 3
                     , scotty >= 0.11 && < 1
                     , postgresql-simple >= 0.5.2.1 && < 1
                     , postgresql-simple-migration >= 0.1.6.0 && < 1
                     , blaze-html >= 0.8.1.2 && < 1
  default-language:    Haskell2010

executable arksink-server
  hs-source-dirs:      src/app/server
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , Arksink
  default-language:    Haskell2010

executable arksink
  hs-source-dirs:      src/app/client
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , Arksink
  default-language:    Haskell2010

test-suite arksink-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/spec
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , Arksink
                     , hspec >= 2.2.3 && < 3
                     , hspec-wai >= 0.6.6 && < 1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: http://code.alaminium.me/habibalamin/arksink
