name:                Arksink
version:             0.1.0.0
synopsis:            Multibrowser cloud bookmark synchroniser
description:         Bookmark management for the indecisive
homepage:            https://arksink.io
license:             MIT
license-file:        LICENSE
author:              Habib Alamin
maintainer:          habib@arksink.io
copyright:           © Habib Alamin
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src/lib
  exposed-modules:     Arksink.Server
                     , Arksink.Client
  other-modules:       View
                     , URL
                     , Client
                     , Client.Data
                     , Client.URL
                     , Client.View
                     , Session
                     , Session.Data
                     , Session.URL
                     , Session.View
                     , SessionClient.Data
                     , About.URL
                     , General.URL
                     , General.View
                     , Landing
                     , Landing.URL
                     , Landing.View
                     , Bookmark
                     , Bookmark.URL
                     , Bookmark.Data
                     , Bookmark.View
                     , Database.PostgreSQL
                     , Database.RedisDB
                     , Static
                     , RequestInfo
                     , Crypto.Password
                     , Crypto.Encryption
                     , Crypto.Verification
                     , Cookie.Secure
                     , Extension.Functor
                     , Extension.Applicative
                     , Extension.ByteString
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.7 && < 1
                     , random >= 1.1 && < 2
                     , dotenv >= 0.3.1.0 && < 1
                     , unix >= 2.7.2.1 && < 3
                     , time >= 1.6.0.1 && < 2
                     , type-operators >= 0.1.0.4 && < 1
                     , mtl >= 2.2.1 && < 3
                     , transformers >= 0.5.4.0 && < 1
                     , wai >= 3.2.1.1 && < 4
                     , wai-extra >= 3.0.16.1 && < 4
                     , scotty >= 0.11 && < 1
                     , scotty-cookie >= 0.1.0.3 && < 1
                     , cookie >= 0.4.2.1 && < 1
                     , bcrypt >= 0.0.10 && < 0.1
                     , network-uri >= 2.6.1.0 && < 3
                     , bytestring >= 0.10.6.0 && < 1
                     , hedis >= 0.9.7 && < 1
                     , postgresql-simple >= 0.5.2.1 && < 1
                     , postgresql-simple-migration >= 0.1.6.0 && < 1
                     , blaze-html >= 0.8.1.2 && < 1
                     , blazeT >= 0.0.4 && < 1
                     , wai-middleware-static >= 0.8.0 && < 1
                     , http-types >= 0.9.1 && < 1
                     , text >= 1.2.2.1 && < 2
                     , cryptonite >= 0.22 && < 1
                     , memory >= 0.14.5 && < 1
                     , random >= 1.1 && < 2
  default-language:    Haskell2010

executable arksink-server
  hs-source-dirs:      src/app/server
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , Arksink
  default-language:    Haskell2010

executable arksink
  hs-source-dirs:      src/app/client
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , Arksink
  default-language:    Haskell2010

test-suite arksink-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/spec
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , Arksink
                     , hspec >= 2.2.3 && < 3
                     , hspec-wai >= 0.6.6 && < 1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: http://code.alaminium.me/habibalamin/arksink
